--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Clicker+Script&family=Jost:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -9,6 +9,70 @@
 @tailwind components;
 @tailwind utilities;
 
-.nav-left > ul > li{
-  font-family: 'poppins';
+:root {
+  --font-family: 'poppins';
+  --paragraph-font: "Nunito Sans", serif
+}
+.nav-left > ul > li {
+  font-family: var(--font-family);
+}
+.nav-left > button {
+  font-family: var(--font-family);
+}
+.container-slider {
+  height: 700px;
+  margin-top: -70px;
+  background-image: url(../src/assets/img/header-pic.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; 
+}
+.slider-sec-1{
+  padding-top: 60px;
+  padding-bottom: 100px;
+  width: 90%;
+  border: 2px solid red;
+}
+.section-heading{
+  font-family: var(--font-family);
+  font-size: 2.6rem;
+  color: white;
+  position: relative;
+  top: 50px;
+  left: 120px;
+}
+.section-heading2{
+  font-family: var(--font-family);
+  font-size: 2.6rem;
+  color: white;
+  position: relative;
+  top:50px;
+  left: 120px;
+}
+.slider-para{
+  font-family: var(--paragraph-font);
+  font-size: 1rem;
+  color: white;
+  position: relative;
+  top:70px;
+  left: 120px;
+  padding-right: 370px;
+}
+.slider-circle{
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  background-color: white;
+  position: relative;
+  top: 108px;
+  left: 140px;
+}
+.slider-para2{
+  font-family: var(--paragraph-font);
+  font-size: 1rem;
+  color: #000;
+  position: relative;
+  top:115px;
+  left: 160px;
+  padding-right: 370px;
 }
