--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Clicker+Script&family=Jost:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -10,8 +10,8 @@
 @tailwind utilities;
 
 :root {
-  --font-family: 'poppins';
-  --paragraph-font: "Nunito Sans", serif
+  --font-family: "poppins";
+  --paragraph-font: "Nunito Sans", serif;
 }
 .nav-left > ul > li {
   font-family: var(--font-family);
@@ -25,54 +25,92 @@
   background-image: url(../src/assets/img/header-pic.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center; 
+  background-position: center;
+  overflow: hidden;
 }
-.slider-sec-1{
+.slider-sec-1 {
   padding-top: 60px;
   padding-bottom: 100px;
   width: 90%;
   border: 2px solid red;
 }
-.section-heading{
+.section-heading {
   font-family: var(--font-family);
   font-size: 2.6rem;
   color: white;
   position: relative;
   top: 50px;
-  left: 120px;
+  padding-right: 200px;
+  left: 130px;
 }
-.section-heading2{
-  font-family: var(--font-family);
-  font-size: 2.6rem;
-  color: white;
-  position: relative;
-  top:50px;
-  left: 120px;
-}
-.slider-para{
+.slider-para {
   font-family: var(--paragraph-font);
   font-size: 1rem;
   color: white;
   position: relative;
-  top:70px;
-  left: 120px;
+  top: 70px;
+  left: 130px;
   padding-right: 370px;
 }
-.slider-circle{
+.slider-circle {
   height: 40px;
   width: 40px;
   border-radius: 100%;
   background-color: white;
   position: relative;
   top: 108px;
-  left: 140px;
+  left: 150px;
 }
-.slider-para2{
+.slider-para2 {
   font-family: var(--paragraph-font);
   font-size: 1rem;
   color: #000;
   position: relative;
-  top:115px;
-  left: 160px;
+  top: 115px;
+  left: 170px;
   padding-right: 370px;
+}
+
+.slider-girls-image {
+  height: auto;
+  width: 65%;
+  border: 2px solid red;
+  overflow: hidden;
+  position: relative;
+  top: -35px;
+  left: 100px;
+}
+.slider-views{
+  height: 60px;
+  width: 220px;
+  background-color: #dbf1f2;
+  position: absolute;
+  top: 160px;
+  left: -20px;
+  border-radius: 20px;
+}
+.views-image{
+  height: 60px;
+  width: 35%;
+  border: 2px solid red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.views-image-left{
+  height: 35px;
+  width: 35px;
+  background-color: #23bdee;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.views-text{
+  display: flex;
+  flex-direction: column;
+}
+.views-text > p{
+  font-size: 0.9rem;
+  font-family: var(--font-family);
 }
